Updates from Overleaf

--- a/docs/ack.tex
+++ b/docs/ack.tex
@@ -6,16 +6,15 @@
 %%
 
 \chapter{致谢}
-
-	四年时间转眼即逝，青涩而美好的本科生活快告一段落了。回首这段时间，我不仅学习到了很多知识和技能，而且提高了分析和解决问题的能力与养成了一定的科学素养。虽然走过了一些弯路，但更加坚定我后来选择学术研究的道路，实在是获益良多。这一切与老师的教诲和同学们的帮助是分不开的，在此对他们表达诚挚的谢意。
-
-	首先要感谢的是我的指导老师林倞教授。我作为一名本科生，缺少学术研究经验，不能很好地弄清所研究问题的重点、难点和热点，也很难分析自己的工作所能够达到的层次。林老师对整个研究领域有很好的理解，以其渊博的知识和敏锐的洞察力给了我非常有帮助的方向性指导。他严谨的治学态度与辛勤的工作方式也是我学习的榜样，在此向林老师致以崇高的敬意和衷心的感谢。
-
-	最后我要感谢我的家人，正是他们的无私的奉献和支持，我才有了不断拼搏的信息的勇气，才能取得现在的成果。
+    首先，感谢我的指导老师李嘉教授，在大四上学期有幸上了老师的数学实验与软件一课，在课程中我掌握了MATLAB的使用技能，除此之外我还锻炼了独立思考分析问题的能力。这无论是在我课题学习和论文撰写的过程中，还是后面的学习生活中都给我了很大的帮助。由于之前没有学术研究和撰写论文的经验，在完成论文的过程中，老师不仅在大方向上给予我指导，在一些细节上的我不能理解的难点也给了我充分的提点与帮助。同时，在完成论文的过程中，由于个人事务，前期在时间安排上出现了问题。老师也耐心检查我的工作完成情况，确保论文最后的顺利完成。李嘉老师严谨的研究态度，辛勤的工作方式和有条理的对工作安排的能力是我未来工作学习的榜样，在此向李老师致以崇高的敬意和衷心的感谢。
+    
+    同时，感谢四年本科学习生活中学校和学院的培养。四年的本科学习中，我学到了很多的知识与技能，锻炼了独立分析问题和解决问题的能力。我相信无论我以后处于哪一个领域，从事哪一种工作，都将给予我很大的帮助。在此对所有老师的指导，教诲，还有同学们的帮助表示最诚挚的谢意。
+    
+	最后，要感谢我的家人，作为我最有力的精神支柱，正是他们无私的奉献和支持，让我能全心全意的投入学习和个人发展之中，让我有拼搏向前的勇气与力量。
 
 \vskip 108pt
 \begin{flushright}
-	陈冠英\makebox[1cm]{} \\
+	熊锦欣\makebox[1cm]{} \\
 \today
 \end{flushright}
 
