--- a/docs/proposal.tex
+++ b/docs/proposal.tex
@@ -5,27 +5,27 @@
 
 % 选题目的
 \objective{
-
+解决多维尺度变换问题，即当仅知道点与点之间的部分距离信息时，尝试恢复出一套合理的点的坐标。经典多维尺度变换方法可以解决已知距离信息比率较大的情况下的问题，MDS方法中也有相应的解决距离信息缺失的情况下的问题的方法。同时还有先解决半正定规划问题，对半正定距离矩阵进行填充之后，再使用经典多维尺度变换方法进行坐标的恢复。选题尝试介绍数个可以解决这种距离信息有缺失情况下多维尺度变换问题的方法，并进行数值实验，分析比较各种方法的效果以及对有不同特点的数据集下的不同表现。
 }
 
 % 思路
 \methodology{
-
+与通过解决半正定规划问题来恢复距离矩阵的方式不同，本文中尝试借助距离平方矩阵的低秩性，通过解决低秩矩阵填充问题来恢复距离矩阵，再借助经典多维尺度变换方法恢复出坐标。同时，文中也将介绍一种MDS方法中可以解决此类问题的方法。最后，对文中所涉及的方法进行数值实验，通过对恢复的距离矩阵的相对误差和恢复结果的直观观察，以及计算速度等方面来分析比较上述方法。
 }
 
 % 研究方法/程序/步骤
 \researchProcedure{
-
+本文中主要涉及SMACOF方法和先用SVT和OPTSPACE低秩矩阵填充方法恢复距离平方矩阵，再用经典多维尺度变换方法恢复坐标。同时介绍了在特殊情况下更有效的基于Incremental OPTSPACE的方法。
 }
 
 % 相关支持条件
 \supportment{
-
+关于多维尺度变换的问题现在很流行，对于这方面的问题已经有了基础性的成果文献可以参考。同时，低秩矩阵填充的方法在近年来也有很大的进展，出现了很多新的有效的方法可供参考。数值实验方面，由李嘉教授提供数据和坐标结果显示函数。
 }
 
 % 进度安排
 \schedule{
-
+2019年1月之前，阅读相关论文，梳理大致方向与方法。2019年3月之前，完成论文中理论部分的书写，大致完成论文的主体框架。2019年4月之前，初步确定论文正文内容初稿，开始进行排版和进一步的校对修改。2019年4月15日之前，完成第一次查重工作。
 }
 
 % 指导老师意见
