--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
         \makeProposal% 开题报告
         \makeProgressCheck  % 过程检查记录表
         \makeDefenseRecord  % 答辩情况等级表
-    %    \makedisclaim       % 学术诚信声明
+        \makedisclaim       % 学术诚信声明
         \makeabstract       % 中英文摘要
         \maketableofcontents        % 目录
         \makelistoffiguretable
@@ -51,6 +51,6 @@
     %    \newclearpage
     
     
-    %\makeGrade      % 成绩评定记录表
+    \makeGrade      % 成绩评定记录表
 \end{document}
 
